--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="bg-white/80 backdrop-blur-lg shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center gap-4">
-                <img src="https://lh3.googleusercontent.com/d/1B-cM3hX_k_zJ1C5v5i5w1R9y5p1Z5f4P" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
+                <img src="https://i.imgur.com/vOlASeq.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
                 <div class="h-12 w-12 rounded-full border-2 border-dashed border-slate-400 flex items-center justify-center">
                     <span class="text-xs font-semibold text-slate-500 text-center">EC Logo</span>
                 </div>
@@ -46,24 +46,26 @@
     <main class="container mx-auto px-6 py-12 flex items-center justify-center flex-grow">
         <div id="signup-container" class="w-full max-w-md page-container hidden">
             <div class="bg-white p-8 md:p-10 rounded-2xl shadow-2xl">
-                <div id="signup-view">
-                    <h2 class="text-3xl font-extrabold text-center text-slate-900 mb-2">Create Account</h2>
-                    <p class="text-center text-slate-500 mb-8">Daftar untuk menjadi anggota English Court.</p>
-                    <form id="signup-form" class="space-y-4">
-                        <div>
-                            <label for="signup-email" class="block text-sm font-bold text-slate-700 mb-2">Email</label>
-                            <input type="email" id="signup-email" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition" required>
-                        </div>
-                        <div>
-                            <label for="signup-password" class="block text-sm font-bold text-slate-700 mb-2">Password</label>
-                            <input type="password" id="signup-password" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition" required>
-                        </div>
-                        <div id="signup-error" class="hidden text-red-500 text-sm text-center pt-1"></div>
-                        <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 px-4 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all text-lg shadow-lg hover:shadow-blue-200">
-                            Daftar
-                        </button>
-                    </form>
-                </div>
+                <h2 class="text-3xl font-extrabold text-center text-slate-900 mb-2">Create Account</h2>
+                <p class="text-center text-slate-500 mb-8">Daftar untuk menjadi anggota English Court.</p>
+                <form id="signup-form" class="space-y-4">
+                    <div>
+                        <label for="signup-email" class="block text-sm font-bold text-slate-700 mb-2">Email</label>
+                        <input type="email" id="signup-email" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition" required>
+                    </div>
+                    <div>
+                        <label for="signup-password" class="block text-sm font-bold text-slate-700 mb-2">Password</label>
+                        <input type="password" id="signup-password" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition" required>
+                    </div>
+                    <div id="signup-error" class="hidden text-red-500 text-sm text-center pt-1"></div>
+                    <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 px-4 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all text-lg shadow-lg hover:shadow-blue-200">
+                        Daftar
+                    </button>
+                </form>
+                <p class="text-center text-sm text-slate-500 mt-6">
+                    Sudah punya akun?
+                    <a href="#" id="switch-to-login-link" class="font-semibold text-blue-600 hover:underline">Login di sini</a>
+                </p>
             </div>
         </div>
 
@@ -80,11 +82,15 @@
                         <label for="login-password" class="block text-sm font-bold text-slate-700 mb-2">Password</label>
                         <input type="password" id="login-password" class="w-full px-4 py-3 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition" required>
                     </div>
-                     <div id="login-error" class="hidden text-red-500 text-sm text-center pt-1"></div>
+                    <div id="login-error" class="hidden text-red-500 text-sm text-center pt-1"></div>
                     <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 px-4 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all text-lg shadow-lg hover:shadow-blue-200">
                         Login
                     </button>
                 </form>
+                <p class="text-center text-sm text-slate-500 mt-6">
+                    Belum punya akun?
+                    <a href="#" id="switch-to-signup-link" class="font-semibold text-blue-600 hover:underline">Daftar di sini</a>
+                </p>
             </div>
         </div>
     </main>
@@ -96,90 +102,100 @@
     </footer>
 
     <script>
-        // Definisi elemen-elemen DOM
-        const signupContainer = document.getElementById('signup-container');
-        const loginContainer = document.getElementById('login-container');
-        const navToggleButton = document.getElementById('nav-toggle-button');
-        const signupForm = document.getElementById('signup-form');
-        const loginForm = document.getElementById('login-form');
-        const signupError = document.getElementById('signup-error');
-        const loginError = document.getElementById('login-error');
+        document.addEventListener('DOMContentLoaded', () => {
+            // Definisi elemen-elemen DOM
+            const signupContainer = document.getElementById('signup-container');
+            const loginContainer = document.getElementById('login-container');
+            const navToggleButton = document.getElementById('nav-toggle-button');
+            const signupForm = document.getElementById('signup-form');
+            const loginForm = document.getElementById('login-form');
+            const signupError = document.getElementById('signup-error');
+            const loginError = document.getElementById('login-error');
+            const switchToSignupLink = document.getElementById('switch-to-signup-link');
+            const switchToLoginLink = document.getElementById('switch-to-login-link');
 
-        // ==== PENGHUBUNG KE SUPABASE ====
-        // Ganti placeholder di bawah dengan URL dan Kunci yang sudah kamu simpan
-        const SUPABASE_URL = 'https://jelcycdbdokcalsuptwm.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImplbGN5Y2RiZG9rY2Fsc3VwdHdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ0OTM0NTUsImV4cCI6MjA3MDA2OTQ1NX0.tjgC8FKPb8L3T84V5EyRg5KSc23zr0Kcb0w5VsP4d6I';
-        // ================================
+            // ==== PENGHUBUNG KE SUPABASE ====
+            const SUPABASE_URL = 'https://jelcycdbdokcalsuptwm.supabase.co';
+            const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImplbGN5Y2RiZG9rY2Fsc3VwdHdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ0OTM0NTUsImV4cCI6MjA3MDA2OTQ1NX0.tjgC8FKPb8L3T84V5EyRg5KSc23zr0Kcb0w5VsP4d6I';
+            // ================================
 
-        // Membuat koneksi ke Supabase
-        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+            const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-        // Fungsi untuk berpindah halaman dengan animasi
-        const switchPage = (pageToShow, pageToHide) => {
-            pageToHide.classList.add('is-exiting');
-            setTimeout(() => {
-                pageToHide.classList.add('hidden');
-                pageToHide.classList.remove('is-exiting');
-                pageToShow.classList.remove('hidden');
-            }, 300);
-        };
-
-        // Event listener untuk tombol navigasi header (Login/Sign Up)
-        navToggleButton.addEventListener('click', () => {
-            const isLoginVisible = !loginContainer.classList.contains('hidden');
-            if (isLoginVisible) {
-                switchPage(signupContainer, loginContainer);
-                navToggleButton.textContent = 'Login';
-            } else {
+            const showLogin = () => {
                 switchPage(loginContainer, signupContainer);
                 navToggleButton.textContent = 'Sign Up';
-            }
-        });
+            };
 
-        // Logika Sign Up (Daftar)
-        signupForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const email = document.getElementById('signup-email').value;
-            const password = document.getElementById('signup-password').value;
-            signupError.classList.add('hidden');
+            const showSignUp = () => {
+                switchPage(signupContainer, loginContainer);
+                navToggleButton.textContent = 'Login';
+            };
 
-            // Mengirim data pendaftaran ke Supabase
-            const { data, error } = await supabase.auth.signUp({
-                email: email,
-                password: password,
+            const switchPage = (pageToShow, pageToHide) => {
+                if (pageToHide) {
+                    pageToHide.classList.add('is-exiting');
+                    setTimeout(() => {
+                        pageToHide.classList.add('hidden');
+                        pageToHide.classList.remove('is-exiting');
+                        if (pageToShow) pageToShow.classList.remove('hidden');
+                    }, 300);
+                } else if (pageToShow) {
+                    pageToShow.classList.remove('hidden');
+                }
+            };
+
+            navToggleButton.addEventListener('click', () => {
+                const isLoginVisible = !loginContainer.classList.contains('hidden');
+                if (isLoginVisible) {
+                    showSignUp();
+                } else {
+                    showLogin();
+                }
             });
 
-            if (error) {
-                signupError.textContent = error.message;
-                signupError.classList.remove('hidden');
-            } else {
-                alert('Pendaftaran berhasil! Silakan cek email untuk verifikasi (jika diaktifkan), lalu login.');
-                switchPage(loginContainer, signupContainer); // Langsung pindah ke halaman login
-                navToggleButton.textContent = 'Sign Up';
-            }
-        });
-
-        // Logika Login
-        loginForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const email = document.getElementById('login-email').value;
-            const password = document.getElementById('login-password').value;
-            loginError.classList.add('hidden');
-
-            // Mengirim data login ke Supabase untuk diperiksa
-            const { data, error } = await supabase.auth.signInWithPassword({
-                email: email,
-                password: password,
+            switchToSignupLink.addEventListener('click', (e) => {
+                e.preventDefault();
+                showSignUp();
             });
 
-            if (error) {
-                loginError.textContent = error.message;
-                loginError.classList.remove('hidden');
-            } else {
-                alert('Login berhasil!');
-                // Di sini nanti kita akan arahkan ke halaman beranda
-                // window.location.href = './beranda.html';
-            }
+            switchToLoginLink.addEventListener('click', (e) => {
+                e.preventDefault();
+                showLogin();
+            });
+
+            signupForm.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const email = document.getElementById('signup-email').value;
+                const password = document.getElementById('signup-password').value;
+                signupError.classList.add('hidden');
+
+                const { data, error } = await supabase.auth.signUp({ email, password });
+
+                if (error) {
+                    signupError.textContent = error.message;
+                    signupError.classList.remove('hidden');
+                } else {
+                    alert('Pendaftaran berhasil! Silakan login dengan akun yang baru dibuat.');
+                    showLogin(); 
+                }
+            });
+
+            loginForm.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const email = document.getElementById('login-email').value;
+                const password = document.getElementById('login-password').value;
+                loginError.classList.add('hidden');
+
+                const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+
+                if (error) {
+                    loginError.textContent = "Email atau password salah.";
+                    loginError.classList.remove('hidden');
+                } else {
+                    alert('Login berhasil!');
+                    // window.location.href = './beranda.html';
+                }
+            });
         });
     </script>
 </body>
