--- a/beranda.html
+++ b/beranda.html
@@ -59,7 +59,7 @@
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#" class="nav-link-active">Beranda</a>
                 <a href="#" class="text-slate-600 hover:text-blue-600 transition-colors">Materi</a>
-                <a href="#" class="text-slate-600 hover:text-blue-600 transition-colors">Tugas</a>
+                <a href="tugas.html" class="text-slate-600 hover:text-blue-600 transition-colors">Tugas</a>
                 <a href="#" class="text-slate-600 hover:text-blue-600 transition-colors">Pengumuman</a>
             </div>
 
@@ -130,7 +130,7 @@
                 <h3 class="text-xl font-bold text-blue-700">📚 Materi Belajar</h3>
                 <p class="text-slate-500 mt-1 text-sm">Akses semua modul dan catatan pertemuan.</p>
             </a>
-            <a href="#" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
+            <a href="tugas.html" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
                 <h3 class="text-xl font-bold text-green-700">📝 Kumpul Tugas</h3>
                 <p class="text-slate-500 mt-1 text-sm">Lihat daftar tugas dan unggah pekerjaanmu.</p>
             </a>
