--- a/beranda.html
+++ b/beranda.html
@@ -43,11 +43,9 @@
 </head>
 <body class="min-h-screen">
 
-    <!-- Header dengan Menu Profil Dropdown -->
     <header class="bg-white/90 backdrop-blur-lg shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 sm:px-6 py-3 flex justify-between items-center">
-            <!-- Logo Section -->
-            <a href="#" class="flex items-center gap-3">
+            <a href="./beranda.html" class="flex items-center gap-3">
                 <img src="https://i.imgur.com/vOlASeq.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
                 <div class="h-12 w-12 rounded-full border-2 border-dashed border-slate-400 flex items-center justify-center">
                     <span class="text-xs font-semibold text-slate-500 text-center">EC Logo</span>
@@ -55,15 +53,13 @@
                 <span class="text-xl font-bold text-blue-700 hidden sm:block">English Court</span>
             </a>
             
-            <!-- Main Navigation (Desktop) -->
             <div class="hidden md:flex items-center space-x-8">
-                <a href="#" class="nav-link-active">Beranda</a>
-                <a href="#" class="text-slate-600 hover:text-blue-600 transition-colors">Materi</a>
-                <a href="tugas.html" class="text-slate-600 hover:text-blue-600 transition-colors">Tugas</a>
-                <a href="#" class="text-slate-600 hover:text-blue-600 transition-colors">Pengumuman</a>
+                <a href="./beranda.html" class="nav-link-active">Beranda</a>
+                <a href="./materi.html" class="text-slate-600 hover:text-blue-600 transition-colors">Materi</a>
+                <a href="./tugas.html" class="text-slate-600 hover:text-blue-600 transition-colors">Tugas</a>
+                <a href="./pengumuman.html" class="text-slate-600 hover:text-blue-600 transition-colors">Pengumuman</a>
             </div>
 
-            <!-- Profile Dropdown -->
             <div class="relative">
                 <button id="profile-button" class="flex items-center gap-2 group">
                     <img id="profile-avatar" src="https://placehold.co/40x40/dbeafe/4338ca?text=U" alt="User Avatar" class="w-10 h-10 rounded-full border-2 border-slate-200 group-hover:border-blue-400 transition object-cover">
@@ -72,9 +68,8 @@
                         <p class="text-xs text-slate-500">Member</p>
                     </div>
                 </button>
-                <!-- Dropdown Menu -->
                 <div id="profile-dropdown" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-xl z-20 py-1">
-                    <a href="#" class="flex items-center gap-3 px-4 py-2 text-sm text-slate-700 hover:bg-slate-100">
+                    <a href="./profil.html" class="flex items-center gap-3 px-4 py-2 text-sm text-slate-700 hover:bg-slate-100">
                         <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
                         <span>Profil</span>
                     </a>
@@ -88,33 +83,27 @@
         </nav>
     </header>
 
-    <!-- Konten Utama Halaman Beranda -->
     <main class="container mx-auto px-4 sm:px-6 py-8">
         
-        <!-- Bagian Sambutan -->
         <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md mb-8">
             <h1 class="text-2xl sm:text-3xl font-bold text-slate-800" id="welcome-message">Selamat Datang!</h1>
             <p class="text-slate-600 mt-2">Jelajahi materi, lihat pengumuman, dan kumpulkan tugasmu di sini.</p>
         </div>
 
-        <!-- Carousel Dokumentasi -->
         <div class="relative overflow-hidden bg-slate-200 rounded-xl shadow-lg aspect-w-16 aspect-h-9">
             <div class="carousel-track h-full">
-                <!-- Slide 1 -->
                 <div class="carousel-slide h-full">
                     <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?q=80&w=2070&auto=format&fit=crop" alt="Dokumentasi 1">
                     <div class="carousel-caption">
                         <h3 class="text-lg sm:text-2xl font-bold">EC Debate Competition 2025</h3>
                     </div>
                 </div>
-                <!-- Slide 2 -->
                 <div class="carousel-slide h-full">
                     <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=2071&auto=format&fit=crop" alt="Dokumentasi 2">
                     <div class="carousel-caption">
                         <h3 class="text-lg sm:text-2xl font-bold">Weekly Meeting</h3>
                     </div>
                 </div>
-                <!-- Slide 3 -->
                 <div class="carousel-slide h-full">
                     <img src="https://images.unsplash.com/photo-1531482615713-2c657768cd91?q=80&w=2070&auto=format&fit=crop" alt="Dokumentasi 3">
                     <div class="carousel-caption">
@@ -124,21 +113,20 @@
             </div>
         </div>
 
-        <!-- Menu Navigasi Utama (Kartu) -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8">
-            <a href="#" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
+            <a href="./materi.html" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
                 <h3 class="text-xl font-bold text-blue-700">📚 Materi Belajar</h3>
                 <p class="text-slate-500 mt-1 text-sm">Akses semua modul dan catatan pertemuan.</p>
             </a>
-            <a href="tugas.html" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
+            <a href="./tugas.html" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
                 <h3 class="text-xl font-bold text-green-700">📝 Kumpul Tugas</h3>
                 <p class="text-slate-500 mt-1 text-sm">Lihat daftar tugas dan unggah pekerjaanmu.</p>
             </a>
-            <a href="#" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
+            <a href="./pengumuman.html" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
                 <h3 class="text-xl font-bold text-yellow-700">📢 Pengumuman</h3>
                 <p class="text-slate-500 mt-1 text-sm">Informasi terbaru seputar kegiatan EC.</p>
             </a>
-            <a href="#" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
+            <a href="./profil.html" class="block bg-white p-6 rounded-xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all">
                 <h3 class="text-xl font-bold text-purple-700">👤 Profil Saya</h3>
                 <p class="text-slate-500 mt-1 text-sm">Lihat dan atur informasi akun Anda.</p>
             </a>
