--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <header class="bg-white/90 backdrop-blur-lg shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 sm:px-6 py-3 flex justify-between items-center">
             <a href="./index.html" class="flex items-center gap-3">
-                <img src="https://i.imgur.com/hoSTrPD.jpeg" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
+                <img src="https://i.imgur.com/kLMVg0W.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
                 <span class="text-xl font-bold text-blue-700">English Court</span>
             </a>
             <div class="flex items-center gap-4">
@@ -223,5 +223,6 @@
     </script>
 </body>
 </html>
+
 
 
