--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <main>
         <!-- BACKGROUND (HERO SECTION) -->
-        <section class="relative h-[50vh] md:h-[60vh] bg-cover bg-center text-white flex items-center justify-center" style="background-image: linear-gradient(rgba(10, 20, 40, 0.5), rgba(10, 20, 40, 0.5)), url('https://images.unsplash.com/photo-1523240795612-9a054b0db644?q=80&w=2070&auto-format&fit=crop');">
+        <section class="relative h-[50vh] md:h-[60vh] bg-cover bg-center text-white flex items-center justify-center" style="background-image: linear-gradient(rgba(10, 20, 40, 0.5), rgba(10, 20, 40, 0.5)), url('https://i.imgur.com/iHGgTPA.png');">
             <div class="text-center p-4">
                 <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">Level Up Your English.</h1>
                 <h2 class="text-4xl md:text-6xl font-extrabold text-violet-300">Unleash Your Confidence.</h2>
@@ -313,3 +313,4 @@
     </script>
 </body>
 </html>
+
