--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="flex justify-between items-center">
                 <!-- Logo -->
                 <a href="./index.html" class="flex items-center gap-3">
-                    <img src="https://i.imgur.com/dI8zJmf.png="Logo SMAN 3 Lamongan" class="h-12 w-12">
+                    <img src="https://i.imgur.com/vOlASeq.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
                     <div class="hidden sm:block">
                         <p class="font-bold text-blue-700 text-lg">English Court</p>
                         <p class="text-xs text-slate-500 -mt-1">SMAN 3 Lamongan</p>
@@ -102,18 +102,18 @@
                     <!-- Kolom Kiri: Teks dan Pencarian -->
                     <div class="space-y-6 reveal">
                         <p class="font-semibold text-lg">Official Website of English Court</p>
-                        <h1 class="text-5xl lg:text-6xl font-extrabold tracking-tight">SMAGALA English Community</h1>
+                        <h1 class="text-5xl lg:text-6xl font-extrabold tracking-tight">LEVEL UP YOUR ENGLISH</h1>
                         <div class="relative">
                             <input type="text" placeholder="Cari informasi kegiatan, materi, atau pengumuman..." class="w-full py-4 pl-5 pr-12 rounded-full text-slate-800 focus:ring-2 focus:ring-blue-400 border-0">
                             <button class="absolute top-1/2 right-3 -translate-y-1/2 bg-blue-600 p-2 rounded-full hover:bg-blue-700 transition-colors">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                             </button>
                         </div>
-                        <p class="text-lg italic opacity-90">""Connecting minds, bridging cultures through English. Let's grow together!"</p>
+                        <p class="text-lg italic opacity-90">"The limits of my language mean the limits of my world." - Ludwig Wittgenstein</p>
                     </div>
                     <!-- Kolom Kanan: Gambar -->
                     <div class="hidden md:block relative h-full">
-                         <img src="https://i.imgur.com/dI8zJmf.png" alt="Siswa Sekolah" class="absolute bottom-[-5rem] right-0 w-[500px] h-auto reveal">
+                         <img src="https://i.imgur.com/G3Qk897.png" alt="Siswa Sekolah" class="absolute bottom-[-5rem] right-0 w-[500px] h-auto reveal">
                     </div>
                 </div>
             </div>
