--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="flex justify-between items-center">
                 <!-- Logo -->
                 <a href="./index.html" class="flex items-center gap-3">
-                    <img src="https://i.imgur.com/dI8zJmf.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
+                    <img src="https://i.imgur.com/vOlASeq.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
                     <div class="hidden sm:block">
                         <p class="font-bold text-blue-700 text-lg">English Court</p>
                         <p class="text-xs text-slate-500 -mt-1">SMAN 3 Lamongan</p>
@@ -118,18 +118,18 @@
                     <!-- Kolom Kiri: Teks dan Pencarian -->
                     <div class="space-y-6 reveal">
                         <p class="font-semibold text-lg">Official Website of English Court</p>
-                        <h1 class="text-5xl lg:text-6xl font-extrabold tracking-tight">SMAGALA English Community</h1>
+                        <h1 class="text-5xl lg:text-6xl font-extrabold tracking-tight">LEVEL UP YOUR ENGLISH</h1>
                         <div class="relative">
                             <input type="text" placeholder="Cari informasi kegiatan, materi, atau pengumuman..." class="w-full py-4 pl-5 pr-12 rounded-full text-slate-800 focus:ring-2 focus:ring-blue-400 border-0">
                             <button class="absolute top-1/2 right-3 -translate-y-1/2 bg-blue-600 p-2 rounded-full hover:bg-blue-700 transition-colors">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                             </button>
                         </div>
-                        <p class="text-lg italic opacity-90">"Connecting minds, bridging cultures through English. Let's grow together!"</p>
+                        <p class="text-lg italic opacity-90">"The limits of my language mean the limits of my world." - Ludwig Wittgenstein</p>
                     </div>
                     <!-- Kolom Kanan: Gambar -->
                     <div class="hidden md:block relative h-full">
-                         <img src="https://i.imgur.com/dI8zJmf.png" alt="Siswa Sekolah" class="absolute bottom-[-5rem] right-0 w-[500px] h-auto reveal">
+                         <img src="https://i.imgur.com/G3Qk897.png" alt="Siswa Sekolah" class="absolute bottom-[-5rem] right-0 w-[500px] h-auto reveal">
                     </div>
                 </div>
             </div>
@@ -307,6 +307,11 @@
         </div>
     </footer>
 
+    <!-- Bubble Chat -->
+    <a href="./chat.html" class="chat-bubble fixed bottom-6 right-6 bg-blue-600 text-white w-16 h-16 rounded-full flex items-center justify-center shadow-lg hover:bg-blue-700 transition-transform hover:scale-110">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" /></svg>
+    </a>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const SUPABASE_URL = 'https://jelcycdbdokcalsuptwm.supabase.co';
@@ -322,7 +327,6 @@
                 let slides = Array.from(track.children);
                 if(slides.length <= 1) return;
 
-                // Clone slides for infinite loop effect
                 slides.forEach(slide => track.appendChild(slide.cloneNode(true)));
                 
                 let currentSlide = 0;
@@ -333,13 +337,12 @@
                     track.style.transition = 'transform 0.7s ease-in-out';
                     track.style.transform = `translateX(-${currentSlide * slideWidth}px)`;
 
-                    // Reset to beginning without animation when clone ends
                     if (currentSlide >= slides.length) {
                         setTimeout(() => {
                             track.style.transition = 'none';
                             track.style.transform = 'translateX(0)';
                             currentSlide = 0;
-                        }, 700); // Must match transition duration
+                        }, 700);
                     }
                 }
                 
@@ -351,8 +354,6 @@
                     track.style.transform = `translateX(-${currentSlide * slideWidth}px)`;
                 });
             }
-
-            // --- INISIALISASI SLIDER ---
             setupSlider('agenda-track', 6000);
 
             // --- LOGIKA ADAPTIF HEADER ---
@@ -417,4 +418,3 @@
     </script>
 </body>
 </html>
-
