--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             <!-- Header Kartu -->
             <div class="text-center mb-8">
                 <a href="./index.html" class="flex justify-center items-center gap-3 mb-4">
-                    <img src="https://i.imgur.com/vOlASeq.png" alt="Logo SMAN 3 Lamongan" class="h-14 w-14 bg-white/80 rounded-full p-1">
+                    <img src="https://i.imgur.com/eJl2l0b.png" alt="Logo SMAN 3 Lamongan" class="h-14 w-14 bg-white/80 rounded-full p-1">
                 </a>
                 <h1 class="text-3xl font-bold text-white">English Court</h1>
                 <p class="text-white/70">SMAN 3 Lamongan</p>
