--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
             opacity: 1;
             transform: translateY(0);
         }
+        /* Bubble Chat Style */
+        .chat-bubble {
+            animation: bounce 2s infinite ease-in-out;
+        }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
     </style>
 </head>
 <body class="min-h-screen">
